argocd-kustomize/argocd/overlays-ld/non-prod/patches/argocd-ingress-custom.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
        path: /
  tls:
  - hosts:
    - $(INGRESS_HOST)
    secretName: argocd-tls
